<resources>
    <string name="app_name">Clean architecture</string>

    <string name="cancel_upper">CANCEL</string>
    <string name="ok_upper">OK</string>
    <string name="network_disconnected">Сеть недоступна</string>
	<string name="double_back_pressed">Для выхода нажмите ещё раз</string>
    <string name="setting">Настройки</string>
    <string name="exit">Выход</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="warning">Внимание</string>
    <string name="connect_to_net">Включите сеть</string>
    <string name="desktop">Тема оформления</string>
    <string name="dialog_desktop_title">Выберите тему оформления</string>

    <string name="test">Тест</string>
    <string name="test_mesage">Тестовое сообщение</string>

    <string name="permission_write_external_storage">Нужно право для записи лога приложения</string>
    <string name="permission_read_contacts">Нужно право для чтения контактов</string>
    <string name="permission_call_phone">Нужно право для осуществления звонков по телефону</string>
    <string name="contacts">Контакты</string>
	<string name="search_hint">Найти</string>
    <string name="no_data">Данных нет</string>
    <string name="phone_call">Позвонить</string>

    <string name="setting_caching_type_key">caching_type_default</string>
    <string name="setting_caching_type_title">Тип кэширования данных</string>
    <string name="setting_caching_type_summary">Выберите тип кэширования данных по умолчанию</string>

    <string name="type_caching_0">Без кэширования</string>
    <string name="type_caching_1">Кэширование в памяти</string>
    <string name="type_caching_2">Кэширование на диске</string>
    <string name="type_caching_3">Кэширование в памяти и на диске</string>

    <string name="db_created">БД %s создана</string>
    <string name="db_updated">БД %s обновлена</string>

    <string name="error_db_not_connected">Отсутствует соединение с БД</string>
    <string name="error_get_data">Ошибка получения данных</string>
    <string name="error_db">Ошибка базы данных</string>
    <string name="error_db_app_not_loaded">Приложение не запущено</string>
    <string name="error">Ошибка</string>
    <string name="error_read_phone_contacts">Ошибка чтения телефонных контактов</string>
    <string name="error_application">Ошибка в приложении</string>
    <string name="error_not_found_activity">Не могу получить текущую activity</string>
    <string name="error_activity_not_valid">Activity уже уничтожена</string>
    <string name="error_geocoder_not_found">Служба геодекодирования не найдена. Перегрузите устройство. При повторяющейся ошибке запретите определение местоположения приложению</string>
    <string name="error_phone_max_length">Количество цифр в номере телефона %s превышает 11</string>
    <string name="error_phone_min_length">Количество цифр в номере телефона %s менее 3</string>
    <string name="error_subscriber_empty">Подписчик проверки пуст</string>
    <string name="error_validator_not_found">Не найден валидатор</string>
    <string name="error_sufix">\nЕсли Вам не понятна ошибка свяжитесь с разработчиками программы</string>

    <string name="test_message">Тестовое сообщение</string>
    <string name="share_with">Отправить с помощью ...</string>

    <string name="settings_order_title">Настройки отображения</string>
    <string name="settings_display">Порядок отображения</string>

    <string name="tooltip_search">Используйте символ \'<font color="red">*</font>\' для поиска во всех словах. Например:\nш* - искать все слова, начинающиеся с \'ш\'\n*ов - найти все слова, оканчивающиеся на \'ов\'</string>
    <string name="settings_show_tooltip">Показывать подсказки</string>
    <string name="settings_show_screenshot">Разрешить скриншоты приложения</string>
    <string name="settings_color">Настройки цветов</string>
    <string name="settings_color_on_connect_network">Цвет заголовка приложения при наличии сети</string>
    <string name="settings_color_on_disconnect_network">Цвет заголовка приложения при отсутствии сети</string>
    <string name="display">Дисплей</string>
    <string name="screenshot_help">Перезапустите приложение для применения настройки, предварительно выгрузив его из памяти. Или перегрузите смартфон</string>

    <string name="settings_color_title">Выберите цвет</string>
    <string name="settings_color_button">Цвет по умолчанию</string>

    <string name="log_view">Просмотр лога приложения</string>
    <string name="log_view_title">Выберите программу для просмотра файла</string>

    <string name="modules">Модули</string>

    <string name="module_notification">Модуль отображения уведомлений</string>
    <string name="service_notification">Сервис отображения уведомлений</string>
    <string name="service_board">Сервис отображения доски объявлений</string>
    <string name="service_badger">Сервис отображения бейджиков</string>
    <string name="module_location">Модуль определения местоположения</string>
    <string name="module_validation">Контроллер проверки данных</string>
    <string name="module_transformation">Модуль преобразования данных</string>
    <string name="module_application">Контроллер приложения</string>
    <string name="module_presenter">Контроллер презенторов</string>
    <string name="module_user_interaction">Контроллер действий пользователя</string>
    <string name="module_navigation">Контроллер навигации в приложении</string>
    <string name="module_preferences">Контроллер преференций</string>
    <string name="module_mail">Контроллер почтовых сообщений</string>
    <string name="module_crash">Контроллер критических ошибок</string>
    <string name="module_desktop">Контроллер оформления</string>
    <string name="module_error">Контроллер ошибок</string>
    <string name="module_event">Контроллер сообщений</string>
    <string name="module_activities">Контроллер активностей</string>
    <string name="module_repository">Репозиторий</string>
    <string name="module_use_cases">Контроллер бизнес логики</string>

    <string name="enable_location">Включите определение местоположения в настройках телефона</string>
    <string name="orientation">Ориентация программы</string>

</resources>
