<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sidemenu_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/sidemenu_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/sidemenu_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider_color"
                android:orientation="horizontal"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/dimen_48dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dimen_32dp"
                        android:layout_height="@dimen/dimen_32dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_16dp"
                        android:src="@mipmap/ic_settings" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_16dp"
                        android:layout_marginRight="@dimen/dimen_16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/setting"
                        android:textColor="@color/text_dark"
                        android:textSize="@dimen/text_size_large" />
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <View style="@style/HorizontalDividerDark" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider_color"
                android:orientation="horizontal"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/desktop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/dimen_48dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dimen_32dp"
                        android:layout_height="@dimen/dimen_32dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_16dp"
                        android:src="@mipmap/ic_brush_grey600_48dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_16dp"
                        android:layout_marginRight="@dimen/dimen_16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/desktop"
                        android:textColor="@color/text_dark"
                        android:textSize="@dimen/text_size_large" />
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <View style="@style/HorizontalDividerDark" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider_color"
                android:orientation="horizontal"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/desktop_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/dimen_48dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dimen_32dp"
                        android:layout_height="@dimen/dimen_32dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_16dp"
                        android:src="@mipmap/ic_format_list_checks_grey600_48dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_16dp"
                        android:layout_marginRight="@dimen/dimen_16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/settings_order_title"
                        android:textColor="@color/text_dark"
                        android:textSize="@dimen/text_size_large" />
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <View style="@style/HorizontalDividerDark" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/divider_color"
                android:orientation="horizontal"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#585858"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:id="@+id/log_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/dimen_48dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dimen_32dp"
                        android:layout_height="@dimen/dimen_32dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_16dp"
                        android:src="@mipmap/ic_content_paste" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dimen_16dp"
                        android:layout_marginRight="@dimen/dimen_16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/log_view"
                        android:textColor="@color/text_dark"
                        android:textSize="@dimen/text_size_large" />
                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <View style="@style/HorizontalDividerDark" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/sidemenu_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divider_color"
        android:orientation="vertical">

        <View style="@style/HorizontalDividerDark" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="#585858"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="true">

            <LinearLayout
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dimen_48dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_32dp"
                    android:layout_height="@dimen/dimen_32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:src="@mipmap/ic_home_dark" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginRight="@dimen/dimen_16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/exit"
                    android:textColor="@color/text_dark"
                    android:textSize="@dimen/text_size_large" />
            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>
</LinearLayout>